@@ -27,7 +27,6 @@ dns_ip=Default IP address for DNS records,3,Same as virtual server IP
 disable=Features to deactivate when disabling,13,unix-Administration user (lock account),mail-Mail (stop accepting email for domain),web-Website (replace site with error page),dns-DNS (stop serving domain),mysql-MySQL (disallow login by MySQL user),postgres-PostgreSQL (disallow login by PostgreSQL user),ftp-ProFTPD (deny access)
 delete_indom=Delete all Apache virtual hosts in domain when deleting?,1,1-Yes,0-No
 ldap=Store users and groups,1,1-In LDAP database,0-In local files
-php_ini=Full path to master PHP config file,0
 compression=Backup compression format,1,0-gzip,1-bzip2,2-None (tar only)
 
 line1.4=User interface settings,11
