@@ -597,3 +597,4 @@ Added script installer for Simple Machines Forum.
 Added a server templates option to set the default timeout for the HTTP status monitor feature.
 The number of days to keep old bandwidth data can now be configured on the Bandwidth Monitoring page.
 Added the list-features.pl script, for finding available features for new virtual servers.
+Updated all script installers to check for the mysql and possibly pgsql PHP modules, if needed.
